force-app/main/default/objects/ActivationAudit__c/ActivationAudit__c.object-meta.xml
<CustomObject>
    <label>ActivationAudit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ActivationAudit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActivationAudits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>