force-app/main/default/objects/ActivationAudit__c/fields/ActionTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ActionTimestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ActionTimestamp</label>
    <type>DateTime</type>
</CustomField>