force-app/main/default/objects/ActivationAudit__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>ActionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature Enabled</fullName>
            </value>
            <value>
                <fullName>Feature Disabled</fullName>
            </value>
            <value>
                <fullName>Quota Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>