force-app/main/default/objects/ActivationAudit__c/fields/ActorId__c.field-meta.xml
<CustomField>
    <fullName>ActorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActorId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivationAudits3</relationshipName>
    <type>Lookup</type>
</CustomField>