force-app/main/default/objects/ActivationAudit__c/fields/AdminUser__c.field-meta.xml
<CustomField>
    <fullName>AdminUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdminUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivationAudits1</relationshipName>
    <type>Lookup</type>
</CustomField>