force-app/main/default/objects/ActivationAudit__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EffectiveFrom</label>
    <type>DateTime</type>
</CustomField>