force-app/main/default/objects/ActivationAudit__c/fields/FeatureKey__c.field-meta.xml
<CustomField>
    <fullName>FeatureKey__c</fullName>
    <label>FeatureKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>