force-app/main/default/objects/ActivationAudit__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>