force-app/main/default/objects/ActivationAudit__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OldValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>