force-app/main/default/objects/ActivationAudit__c/fields/PerformedAt__c.field-meta.xml
<CustomField>
    <fullName>PerformedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PerformedAt</label>
    <type>DateTime</type>
</CustomField>