force-app/main/default/objects/ActivationAudit__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>