force-app/main/default/objects/ActivationAudit__c/fields/TargetFeature__c.field-meta.xml
<CustomField>
    <fullName>TargetFeature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TargetFeature</label>
    <referenceTo>TargetFeature__c</referenceTo>
    <relationshipLabel>ActivationAudits</relationshipLabel>
    <relationshipName>ActivationAudits</relationshipName>
    <type>Lookup</type>
</CustomField>