force-app/main/default/objects/ActivationAudit__c/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TargetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>