force-app/main/default/objects/ActivationAudit__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>ActivationAudits</relationshipLabel>
    <relationshipName>ActivationAudits</relationshipName>
    <type>Lookup</type>
</CustomField>