force-app/main/default/objects/ActivationAudit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FeatureKey__c</columns>
    <columns>Enabled__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>